Fixed background color on the main image

--- a/zomigames.css
+++ b/zomigames.css
@@ -39,7 +39,7 @@ body {
     background-size: cover;
     background-position: center;
     margin-bottom: 20px;
-    background-color: yellow;
+    background-color: black;
 }
 
 .text-overlay {
