--- a/zomigames.css
+++ b/zomigames.css
@@ -1,3 +1,7 @@
+.colorPalette{
+    color: #FFFBDA,#FFEC9E,#FFBB70,#ED9455;
+}
+
 #loading{
     width: 100%;
     height: 100%;
@@ -9,6 +13,13 @@
     background-size: 100px 90px !important;
 }
 
+#logo{
+    position: absolute;
+    z-index: 10;
+    margin-top: 120px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
 
 body {
     border: 0px;
@@ -17,7 +28,7 @@ body {
 }
 
 #menu-list {
-    height: 70px;
+    height: 50px;
     padding: 20px;
     background-color: #121212;
     display: flex;
@@ -32,7 +43,7 @@ body {
 }
 
 #logo img{
-    height: 100px;
+    height: 120px;
     display: flex;
 }
 
@@ -42,7 +53,6 @@ body {
     border: 0px;
     position: relative;
     max-width:100%;
-   background-image: url(bk.jpg);
     background-size: cover;
     background-position: top;
     margin-bottom: 20px;
@@ -102,7 +112,7 @@ body {
 
 .title img{
     margin-top: 10px;
-    width: 90px;
+    width: 80px;
 }
 
 #download img {
@@ -126,6 +136,7 @@ body {
     background-color: black;
 }
 
+
 .main-container div p {
     margin-top: 540px;
     text-align: right;
@@ -134,6 +145,7 @@ body {
      font-family: Verdana, sans-serif; /* Ensure Verdana is the primary font choice */
     font-weight: bold; /* Apply bold style */
 }
+
 
 @media (max-width: 896px) {
     .main-container div {
@@ -145,27 +157,31 @@ body {
     }
 }
 
-.games{
+#baby {
+    background-image: url(baby1.jpg);
+    margin: 50px;
+    margin-top: 80px;
+    border-radius: 30px;
+    background-image: url(baby1.jpg);
     background-size: cover;
     background-position: center;
     max-width: 1080px;
     border-radius: 20px;
-
-}
-
-#baby {
-    background-image: url(baby1.jpg);
-    
 }
 
 #snake{ 
-background-image: url(snake1.jpg);
-    
+    margin: 50px;
+    border-radius: 30px;
+    background-image: url(snake1.jpg);
+    background-size: cover;
+    background-position: center;
+    max-width: 1280px;
 }
 
 
 #box{
-    
+    margin: 50px;
+    border-radius: 30px;
     background-image: url(box2.jpg);
     
 }
