--- a/zomigames.css
+++ b/zomigames.css
@@ -121,7 +121,7 @@ body {
     display: flex;
   flex-wrap: wrap; /* Enable wrapping */
   justify-content: center; /* Center content horizontally */
-    text-shadow:0 0 9px black; /* Example shadow color */
+   
    
 }
 
@@ -154,8 +154,34 @@ body {
     }
 }
 
+#sub{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 250px;
+    margin: 50px;
+    margin-top: 50px;
+    border-radius: 30px;
+    max-width: 1024px;
+    border: 10px solid #121212;
+    background-color: #121212;
+    text-align: center;
+    color: #FFFBDA;
+}
+
+#bk {
+    background-image: url('bk.jpg'); /* Your image path */
+    background-position: top; /* Keeps the image centered */
+    margin: 50px;
+    margin-top: 50px;
+    border-radius: 30px;
+    max-width: 1024px;
+    border: 10px solid #FFBB70;
+}
+
 #baby {
     background-image: url(baby1.jpg);
+    
     margin: 50px;
     margin-top: 50px;
     border-radius: 30px;
@@ -242,7 +268,7 @@ body {
 #download-panel {
     z-index: 500;
     width: 100%;
-    max-height: 2000px;
+    height: 100%;
     padding-top: 120px;
     padding-bottom: 150px;
     position: absolute;
@@ -253,6 +279,7 @@ body {
     margin-left: -100%;
     transition: 0.5s;
 }
+
 
 #detail-panel {
     z-index: 500;
@@ -390,6 +417,8 @@ footer p {
     margin-top:50px;
     font-size: 18px;
 }
+
+
 
 .topnav {
     margin-left: 50px;
