--- a/zomigames.css
+++ b/zomigames.css
@@ -144,15 +144,7 @@ body {
 }
 
 
-@media (max-width: 896px) {
-    .main-container div {
-        height: 300px;
-    }
-    .main-container div p {
-        margin-top: 240px;
-        font-size: 25px;
-    }
-}
+
 
 #sub{
     display: flex;
@@ -167,6 +159,26 @@ body {
     background-color: #121212;
     text-align: center;
     color: #FFFBDA;
+}
+
+#about{
+    height: 300px;
+    padding: 5px;
+    margin: 0px;
+    background-color: #FFBB70;
+     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+
+#about p {
+    padding: 10px;
+    text-align: center;
+    font-size: 20px;
+    color: white;
+    margin: 0px auto;
 }
 
 #bk {
@@ -411,7 +423,14 @@ footer p {
     float:right;
 }
 
-
+#contact {
+    height: 30px;
+    padding: 10px;
+    width: 100%;
+    background-color: black;
+    text-align: center;
+    color: white;
+}
 
 .topnav {
     margin-left: 50px;
@@ -419,4 +438,17 @@ footer p {
     background-color: grey;
     text-align: center;
     padding: 25px;
+}
+
+@media (max-width: 896px) {
+    .main-container div {
+        height: 300px;
+    }
+    .main-container div p {
+        margin-top: 240px;
+        font-size: 25px;
+    }
+    #about p {
+        font-size: 14px;
+    }
 }
